tests/sema/fail/v21_fail_extern_param_str.ep
# COMPILE_FAIL_CONTAINS: extern Bad parameter text has unsupported ABI type str
extern "demo.dll" fun Bad(text: str): i32
fun main(): void {}
